--- a/minimalistic-dark-portfolio/index.html
+++ b/minimalistic-dark-portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Minimalistic, dark portfolio layout</title>
+    <title>Minimalistic, dark portfolio</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
